--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -67,6 +67,14 @@ We reproduce the current version as of July 2021 in the following.
 \section{Works as contributing author}
 
 \begin{itemize}
+	\item M. M. Noack, P. H. Zwart, D. M. Ushizima, M. Fukuto, K. G. Yager, K. C. Elbert, 
+		C. B. Murray, A. Stein, G. S. Doerk, E. H. R. Tsai, R. Li, G. Freychet, 
+		M. Zhernenkov, H.-Y. N. Holman, S. Lee, L. Chen, E. Rotenberg, T. Weber, 
+		Y. Le Goc, M. B\"ohm, P. Steffens, P. Mutti, and J. A. Sethian, 
+	\textit{Gaussian processes for autonomous data acquisition at large-scale synchrotron and neutron facilities},
+	Nature Review Physics (28 July 2021),
+	DOI: \href{https://doi.org/10.1038/s42254-021-00345-y}{10.1038/s42254-021-00345-y}.
+
 	\item Y. Nambu, J. Barker, Y. Okino, T. Kikkawa, Y. Shiomi, M. Enderle, T. Weber, B. Winn, M. Graves-Brook, J. M. Tranquada, T. Ziman, M. Fujita, G. E. W. Bauer, E. Saitoh, and K. Kakurai, 
 	\textit{Observation of Magnon Polarization},
 	Physical Review Letters, Volume 125, 027201 (6 July 2020),
