--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -284,6 +284,23 @@
 
 @article
 {
+	Noack2021,
+	title = {{Gaussian processes for autonomous data acquisition at large-scale synchrotron and neutron facilities}},
+	journal = "Nature Review Physics",
+	volume = "",
+	pages = "",
+	year = "2021",
+	doi = "10.1038/s42254-021-00345-y",
+	OPTurl = "https://doi.org/10.1038/s42254-021-00345-y",
+	author = {M. M. Noack and P. H. Zwart and D. M. Ushizima and M. Fukuto and K. G. Yager and K. C. Elbert and 
+		C. B. Murray and A. Stein and G. S. Doerk and E. H. R. Tsai and R. Li and G. Freychet and 
+		M. Zhernenkov and H.-Y. N. Holman and S. Lee and L. Chen and E. Rotenberg and T. Weber and 
+		Y. Le Goc and M. B\"ohm and P. Steffens and P. Mutti and J. A. Sethian},
+}
+
+
+@article
+{
 	skxpaper,
 	author = {T. Weber and D. M. Fobes and J. Waizner and P. Steffens and G. S. Tucker and M. B\"ohm and L. Beddrich and C. Franz and H. Gabold and R. Bewley and D. Voneshen and M. Skoulatos and R. Georgii and G. Ehlers and A. Bauer and C. Pfleiderer and P. B\"oni and M. Janoschek and M. Garst},
 	title = {{Emergent Landau levels of magnons in a skyrmion lattice}},
