--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -496,7 +496,7 @@ To this end we make use of the graph representation of the Voronoi diagram that 
 in a previous step (section \ref{sec:polygonal_voronoi_diagram}) together with the diagram.
 The graph's vertices and edges correspond to the Voronoi vertices and edges, respectively,
 and a possible optimal path is the shortest distance between the start and target coordinates.
-The shortest distance can readily be calculated using Dijkstra's algorithm \cite{TODO},
+The shortest distance can readily be calculated using Dijkstra's algorithm \cite[unit 4, p. 17]{FUH_algo2021},
 which we show in Fig. \ref{fig:linesegs_path}.
 
 
