--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -184,7 +184,7 @@ the movement of the instrument on the generated paths. The two tasks comprise th
 			space.
 		\item Determine the Voronoi regions of the start and end coordinate points.
 		\item Move the instrument to the edge of the start Voronoi region.
-		\item Calculate the shortest path to the edge of the Voronoi region containing the end point using Dijkstra's algorithm
+		\item Calculate the shortest path to the edge of the Voronoi region containing the end point using Dijkstra's algorithm \cite{wiki_dijkstra}
 			and move the instrument along that path.
 		\item Move the instrument from the edge of the Voronoi region containing the end point towards that point.
 	\end{enumerate}
