--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -171,6 +171,17 @@
         publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
         url = {https://vu.fernuni-hagen.de/lvuweb/lvu/app/Kurs/1840}
 }
+
+
+@book
+{
+	FUH_algo2021,
+        author = {Andr'e Schulz and Jonathan Rollin},
+        title = {{Manuscript of the course 01684, ``Effiziente Algorithmen''}},
+        year = {summer semester 2021},
+        publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
+        url = {https://vu.fernuni-hagen.de/lvuweb/lvu/app/Kurs/1684}
+}
 % -----------------------------------------------------------------------------
 
 
@@ -454,6 +465,18 @@
 	url = "https://en.wikipedia.org/w/index.php?title=Milling_(machining)&oldid=1030994721",
 	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Milling_(machining)&oldid=1030994721}",
 	note = "[Online; accessed 8-July-2021]"
+}
+
+
+@misc
+{
+	wiki_dijkstra,
+	author = "{Wikipedia contributors}",
+	title = {{Dijkstra's algorithm --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Dijkstra%27s_algorithm&oldid=1034739840",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Dijkstra%27s_algorithm&oldid=1034739840}",
+	note = "[Online; accessed 29-July-2021]"
 }
 
 
