--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -176,7 +176,7 @@
 @book
 {
 	FUH_algo2021,
-        author = {Andr'e Schulz and Jonathan Rollin},
+        author = {Andr\'e Schulz and Jonathan Rollin},
         title = {{Manuscript of the course 01684, ``Effiziente Algorithmen''}},
         year = {summer semester 2021},
         publisher = {{FernUniversit\"at in Hagen, Fakult\"at f\"ur Mathematik und Informatik, Hagen, Germany}},
