--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -1,4 +1,4 @@
-\chapter{List of publications}
+\chapter{List of Publications}
 The latest list of publications can be found on-line under \url{https://orcid.org/0000-0002-7230-1932}. 
 We reproduce the current version as of July 2021 in the following.
 
@@ -55,11 +55,11 @@ We reproduce the current version as of July 2021 in the following.
 \begin{itemize}
 	\item T. Weber, \textit{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$} (20 March 2017), ISBN: 978-3-8439-3114-4,
 	PhD Thesis in Physics, Technische Universit\"at M\"unchen, Physikdepartment E21,
-	Garching, Germany. URL: \url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}.
+	Garching bei M\"unchen, Germany. URL: \url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}.
 
 	\item T. Weber, \textit{MIEZE in Theory, Simulation and Experiment} (5 December 2012), 
 	Diploma Thesis in Physics, Technische Universit\"at M\"unchen, Physikdepartment E21,
-	Garching, Germany.
+	Garching bei M\"unchen, Germany.
 \end{itemize}
 
 
