--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -422,6 +422,18 @@
 
 @misc
 {
+	wiki_proj,
+	author = {{Wikipedia contributors}},
+	title = {{Lot (Mathematik) --- Wikipedia{,} Die freie Enzyklop\"adie}},
+	year = "2021",
+	url = "https://de.wikipedia.org/w/index.php?title=Lot_(Mathematik)&oldid=211781730",
+	OPThowpublished = "\url{https://de.wikipedia.org/w/index.php?title=Lot_(Mathematik)&oldid=211781730}",
+	note = "[Online; accessed 29-July-2021]"
+}
+
+
+@misc
+{
 	wiki_summation,
 	author = {{Wikipedia contributors}},
 	title = {{Einstein notation --- {Wikipedia}{,} The Free Encyclopedia}},
