--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -23,13 +23,13 @@ The respective relations between the basis vectors and their angles can be direc
 \begin{equation} \left< a | c \right > \ =\  ac \cos \beta, \label{ac} \end{equation}
 \begin{equation} \left< b | c \right > \ =\  bc \cos \alpha. \label{bc} \end{equation}
 
-\begin{figure*}
+\begin{figure}
 	\centering
 	\includegraphics[width = 0.2 \textwidth]{figures/cell}
 	\caption{The unit cell of a crystal is given by its coordinate vectors $a$, $b$, and $c$ 
 		as well as their angles $\alpha$, $\beta$, and $\gamma$.}
 	\label{fig:cell}
-\end{figure*}
+\end{figure}
 
 
 %\subsection*{Basis vectors}
