--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -45,12 +45,12 @@ A two-axis diffractometer is used for determining the static structure of crysta
 \end{equation}
 with $\lambda_i$ being the neutron wavelength, $d$ the spacing of the crystal lattice planes from which scattering takes place, $\theta_M$ half the monochromator scattering angle and $n$ the order of the reflection. A graphical interpretation of Eq. \ref{eq:bragg} is depicted in Fig. \ref{fig:braggscattering}.
 
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.35\textwidth]{figures/bragg.pdf}
 	\caption{Bragg scattering on crystal planes having a spacing $d$. An incoming parallel neutron beam is reflected at an angle $2 \cdot \theta_M$ on both the upper and lower crystal plane, leading to a path difference of $2d \sin\theta$ between the beams. If the path difference is an integer multiple of the neutron wavelength, $\lambda_i$, the beams interfere constructively. Figure drawn after \cite[p. 68, Fig. 2.7]{Gross2012}. }
 	\label{fig:braggscattering}
-\end{figure*}
+\end{figure}
 
 The resulting monochromatic beam with the wavelength $\lambda_i$ and wavevector $\underline{k}_i$ is Bragg-scattered a second time, this time from a sample powder containing small crystallites. Diffractometers typically contain hundreds of neutron detectors surrounding the sample and picking up diffracted neutrons at a whole range of scattering angles $2 \theta_S$. The scattering angles define the momentum transfer from the neutron to the sample as \cite[p. 11]{Shirane2002}
 \begin{equation}
@@ -59,12 +59,12 @@ The resulting monochromatic beam with the wavelength $\lambda_i$ and wavevector 
 \end{equation}
 where the two wavevectors $\underline{k}_i$ and $\underline{k}_f$ point along the propagation directions of the neutrons before and after scattering from the sample, respectively. They both have the same magnitudes for diffraction, namely $k_{i,f} = 2\pi / \lambda_i$ and are rotated by $2\theta_S$ from one another, see Fig. \ref{fig:diffraction} for a visualisation. The symbol $\hbar$ denotes the reduced Planck's constant, $\hbar = h / \left( 2\pi \right)$.
 
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.35\textwidth]{figures/diffraction.pdf}
 	\caption{Principle of diffraction. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator (M), picking out a single wavelength $\lambda_i$ and corresponding wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining the direction of a wavevector $\underline{k}_f$. The momentum transferred from the neutron to the sample is given by Eq. \ref{eq:Q} as the difference of the two wavevectors.}
 	\label{fig:diffraction}
-\end{figure*}
+\end{figure}
 
 By the intensity of the sample's Bragg reflections, each of which appears at a different scattering angle $2\theta_S$ and thus momentum transfer $\hbar \underline{Q}$, the so-called static nuclear structure factor \cite[p. 25]{Shirane2002} can be reconstructed. Absences of Bragg peaks determine the crystal symmetry given by its space group. Together, they determine the structural build-up of the crystal.
 
@@ -83,19 +83,19 @@ Complementary to the two-axis instrument, a triple-axis spectrometer (TAS) is us
 
 As the name implies, the difference of the TAS set-up compared to the two-axis diffractometer is one additional axis. Having passed the sample, the neutrons may have changed their energy and thus wavelength and magnitude of the wavevector. A further single-crystal is placed in the neutron path between the sample and the detector. Bragg scattering on this crystal allows the detection of the neutron wavelength $\lambda_f$ after the sample, which remained unknown in the diffractometer. Since we also know the incoming wavelength $\lambda_i$ before the scattering event at the sample, we can calculate the transferred energy as given by Eq. \ref{eq:E}. This additional crystal and the corresponding instrument axis are named ``analyser''. Fig. \ref{fig:spectroscopy} visualises the principles of the instrument, Fig. \ref{fig:thales} shows a typical triple-axis instrument with its three axes, namely the monochromator in the right-hand side of the picture, the sample and the analyser with the attached detector.
 
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.4\textwidth]{figures/spectroscopy.pdf}
 	\caption{Principle of spectroscopy. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator crystal (M), picking out a single wavelength $\lambda_i$ and wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining a wavevector $\underline{k}_f$. The magnitude of $\underline{k}_f$ and thus $\lambda_f$ is determined by Bragg-scattering on the analyser crystal (A). The momentum and energy transfers are given by Eqs. \ref{eq:Q} and \ref{eq:E}, respectively. }
 	\label{fig:spectroscopy}
-\end{figure*}
+\end{figure}
 
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.75\textwidth]{figures/thales.jpg}
 	\caption{The triple-axis spectrometer ThALES \cite{thales} at the Institut Laue-Langevin in Grenoble, France. The neutron path from the reactor to the detector is marked as white arrows. The momentum transfer, $\hbar \underline{Q}$, is also shown. This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
 	\label{fig:thales}
-\end{figure*}
+\end{figure}
 
 
 
