--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,3 +1,10 @@
+%
+% acknowledgements and thanks
+% @author Tobias Weber <tweber@ill.fr>
+% @date july-2021
+% @license see 'LICENSE' file
+%
+
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
