--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -1,3 +1,10 @@
+%
+% future errata
+% @author Tobias Weber <tweber@ill.fr>
+% @date july-2021
+% @license see 'LICENSE' file
+%
+
 \chapter{Online Resources and Future Errata}
 
 The latest version of the software of this work can be found under the DOI 
