--- a/tex/gui.tex
+++ b/tex/gui.tex
@@ -1,7 +1,7 @@
 %
-% path-finding
+% path-finding user interfaces
 % @author Tobias Weber <tweber@ill.fr>
-% @date 2021
+% @date july-2021
 % @license see 'LICENSE' file
 %
 
