--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -1,3 +1,10 @@
+%
+% publication list
+% @author Tobias Weber <tweber@ill.fr>
+% @date july-2021
+% @license see 'LICENSE' file
+%
+
 \chapter{List of Publications}
 The latest list of publications can be found on-line under \url{https://orcid.org/0000-0002-7230-1932}. 
 We reproduce the current version as of July 2021 in the following.
