--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -746,6 +746,30 @@
 	note = "[Online; accessed 27-July-2021]",
 }
 
+
+@misc
+{
+	web_Qt,
+	title = {{Qt (Software)}},
+	author = {{The Qt Company}},
+	year = {2021},
+	url = "https://www.qt.io/",
+	OPThowpublished = "\url{https://www.qt.io/}",
+	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
+	web_QCustomPlot,
+	title = {{QCustomPlot (Software)}},
+	author = {Emanuel Eichhammer},
+	year = {2011 - 2021},
+	url = "https://www.qcustomplot.com/",
+	OPThowpublished = "\url{https://www.qcustomplot.com/}",
+	note = "[Online; accessed 31-July-2021]",
+}
+
 % -----------------------------------------------------------------------------
 
 
