--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -761,12 +761,36 @@
 
 @misc
 {
+	web_QOpenGLWidget,
+	title = {{Class QOpenGLWidget, part of the Qt library \cite{web_Qt} (Software)}},
+	author = {{The Qt Company}},
+	year = {2021},
+	url = "https://doc.qt.io/qt-5/qopenglwidget.html",
+	OPThowpublished = "\url{https://doc.qt.io/qt-5/qopenglwidget.html}",
+	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
 	web_QCustomPlot,
 	title = {{QCustomPlot (Software)}},
 	author = {Emanuel Eichhammer},
 	year = {2011 - 2021},
 	url = "https://www.qcustomplot.com/",
 	OPThowpublished = "\url{https://www.qcustomplot.com/}",
+	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
+	web_OpenGL,
+	title = {{OpenGL (Software}},
+	author = {{Khronos Group, Beaverton, OR, USA}},
+	year = {2021},
+	url = "https://www.opengl.org//",
+	OPThowpublished = "\url{https://www.opengl.org//}",
 	note = "[Online; accessed 31-July-2021]",
 }
 
