--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -6,6 +6,7 @@
 %
 
 \chapter{Online Resources and Future Errata}
+\label{ch:online}
 
 The latest version of the software of this work can be found under the DOI 
 \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
