--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -14,7 +14,8 @@ the latest version 20 of the C++ standard \cite{ISOCPP20} was employed in the cr
 together with the Boost C++ template libraries \cite{web_boost}. The source code for the implementation
 can be found in the directory \lstinline|./src/core| together with the library routines in \lstinline|./src/libs|
 of the repository at \url{https://code.ill.fr/scientific-software/takin/paths}. Stable versions of the
-source code have furthermore been registered under the DOI \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
+source code have furthermore been registered under the DOI \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649},
+please refer to chapter \ref{ch:online} for details.
 
 Section \ref{sec:tasmodel} is dedicated to modelling the triple-axis spectrometer (TAS), 
 section \ref{sec:buildpath} discusses the steps involved in building up the mesh of possible instrument paths, 
